# AniDown-Refactor

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  config.json.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CLEANUP_WORKFLOW.md  CLI.md  CODE_ANALYSIS_REPORT.md  CODE_REVIEW.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  QBITTORRENT_WEBHOOK.md
qb-webhook/: README.md  go.mod  main.go  webhook_sender.py
scripts/: test_circuit_breaker.py
src/: __init__.py  container.py  main.py
src/core/: __init__.py  config.py  exceptions.py
src/core/domain/: __init__.py  entities.py  value_objects.py
src/core/interfaces/: __init__.py  adapters.py  notifications.py  repositories.py
src/core/utils/: __init__.py  timezone_utils.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  api_client.py  circuit_breaker.py  file_renamer.py  key_pool.py  prompts.py  schemas.py  subtitle_matcher.py  title_parser.py
src/infrastructure/database/: __init__.py  models.py  session.py
src/infrastructure/downloader/: __init__.py  qbit_adapter.py
src/infrastructure/metadata/: __init__.py  tvdb_adapter.py
src/infrastructure/notification/: __init__.py
src/infrastructure/repositories/: __init__.py  ai_key_repository.py  anime_repository.py  download_repository.py  history_repository.py  (+1 more)
src/interface/: __init__.py
src/services/: __init__.py  ai_debug_service.py  anime_detail_service.py  anime_service.py  config_reloader.py  download_manager.py  file_service.py  filter_service.py  log_rotation_service.py  metadata_service.py  rss_service.py  subtitle_service.py
tests/: __init__.py  conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_e2e_workflow.py  test_rss_workflow.py
tests/unit/: test_ai_context.py  test_discord_notification.py  test_hash_extractor.py  test_key_pool.py  test_manual_upload.py  test_multifile_consistency.py  test_path_conversion.py  test_path_generation.py  test_rss_service.py  test_tvdb.py  test_webhook_queue.py  test_webui.py
(+78 files in other folders)
